# warden

./: .gitignore  Cargo.toml  DESIGN.md  README.md  ROADMAP  ROADMAP.md  TUI_SPEC.md  chaos.sh  context.txt  roadmap.md  tasks.toml  test_apply.txt  warden.toml
.warden_apply_backup/1764278686/: roadmap.md
.warden_apply_backup/1764280154/: roadmap.md
.warden_apply_backup/1764400914/: Cargo.toml
chaos_examples/: bloat.rs  complex.rs  deep.rs  unsafe.rs
src/: analysis.rs  checks.rs  clean.rs  clipboard.rs  config.rs  constants.rs  detection.rs  discovery.rs  enumerate.rs  error.rs  filter.rs  lang.rs  lib.rs  metrics.rs  pack.rs  project.rs  prompt.rs  reporting.rs  rules.rs  spinner.rs  tokens.rs  types.rs  wizard.rs
src/analysis/: ast.rs  checks.rs  metrics.rs  mod.rs
src/apply/: extractor.rs  git.rs  manifest.rs  messages.rs  mod.rs  types.rs  validator.rs  verification.rs
src/cli/: handlers.rs  mod.rs
src/clipboard/: linux.rs  macos.rs  mod.rs  platform.rs  temp.rs  windows.rs
src/config/: io.rs  mod.rs  types.rs
src/graph/: mod.rs  resolver.rs
src/pack/: formats.rs  mod.rs
src/roadmap/: audit.rs  cli.rs  cmd_handlers.rs  cmd_helpers.rs  cmd_parser.rs  cmd_runner.rs  diff.rs  mod.rs  parser.rs  str_utils.rs  types.rs
src/roadmap_v2/: generator.rs  mod.rs  parser.rs  store.rs
src/trace/: mod.rs  options.rs  runner.rs
src/tui/: config_state.rs  (+5 more)
tests/: cli_exit.rs  cli_format.rs  cli_hooks.rs  cli_roadmap.rs  context.txt  integration_apply.rs  integration_audit.rs  integration_backup.rs  integration_core.rs  integration_pack.rs  integration_roadmap.rs  integration_self_host.rs  integration_skeleton.rs  integration_trace.rs  protection_roadmap.rs  security_validation.rs  unit_analysis.rs  unit_audit.rs  unit_config.rs  unit_diff.rs  unit_extractor.rs  unit_manifest.rs  unit_pack.rs  unit_pack_violations.rs  unit_parser.rs  unit_project.rs  unit_roadmap.rs  unit_roadmap_cmd.rs  unit_roadmap_v2.rs  unit_tokens.rs  unit_validator.rs  unit_writer.rs  warden.toml
(+48 files in other folders)
