[package]
name = "warden"
version = "0.1.0"
edition = "2021"

# The Shared Library
[lib]
name = "warden_core"
path = "src/lib.rs"

# Binary 1: The Linter
[[bin]]
name = "warden"
path = "src/bin/warden.rs"

# Binary 2: The Context Packer
[[bin]]
name = "knit"
path = "src/bin/knit.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
colored = "2.1"
rayon = "1.10"
once_cell = "1.19"
